[gd_scene load_steps=7 format=3 uid="uid://b8ox0l4qs4imq"]

[ext_resource type="Theme" uid="uid://csjjraenq4jr2" path="res://ui/themes/ui_theme.tres" id="1_aaxll"]
[ext_resource type="Script" path="res://scripts/ui/main_menu_ui.gd" id="2_rrmeb"]
[ext_resource type="PackedScene" uid="uid://cb6jlbkqo6ua" path="res://ui/objects/how_to_play.tscn" id="3_2jyo1"]

[sub_resource type="Animation" id="Animation_dn185"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4vjdn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w6erm"]
_data = {
"FadeIn": SubResource("Animation_dn185"),
"RESET": SubResource("Animation_4vjdn")
}

[node name="MainMenuUI" type="Control" node_paths=PackedStringArray("sub_menus")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aaxll")
script = ExtResource("2_rrmeb")
sub_menus = [NodePath("HowToPlay")]

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -136.0
offset_right = 346.0
offset_bottom = 136.0
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "Start Game"

[node name="Spacer" type="Control" parent="Menu/Buttons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsButton" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "Settings"

[node name="Spacer3" type="Control" parent="Menu/Buttons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="HowToPlayButton" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "How to play"

[node name="Spacer2" type="Control" parent="Menu/Buttons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="QuitGameButton" type="Button" parent="Menu/Buttons"]
layout_mode = 2
text = "Quit Game"

[node name="Credits" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -139.0
offset_right = 439.0
offset_bottom = -28.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Programmers: Alexander, Samuli
Audio: Anna
3D artists: Daniel, Tom"

[node name="HowToPlay" parent="." instance=ExtResource("3_2jyo1")]
layout_mode = 1

[node name="Foreground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w6erm")
}

[connection signal="pressed" from="Menu/Buttons/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Menu/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/Buttons/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Menu/Buttons/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
